# clinical-relation-extraction

./: .gitignore  README.md  config.py  create_multilingual_dataset.py  infer_ner.py  infer_ner_multilingual.py  infer_rc.py  infer_rc_multilingual.py  infer_re.py  predict.py  prepare_conll_test.py  prepare_conll_test_data.py  prepare_conll_txt.py  prepare_script.sh  pyproject.toml  rc_dataset.py  rc_dataset_multilingual.py  re_dataset.py  requirements.txt  rule_based_NER.py  rule_based_re_predict.py  sweep_config.yaml  sweep_configs.py  sweep_script_ner.py  sweep_script_ner_multilingual.py  sweep_script_rc_multilingual.py  train.py  train_full.py  train_ner.py  train_ner_multilingual.py  train_ner_multilingual_sweeps.py  train_ner_sweeps.py  train_rc.py  train_rc_multilingual.py  train_re.py  train_valid_split.py  utils.py
Error_Analysis/: Entity-Inspection.ipynb  F1-Plots.ipynb  Relation-Errors-Plotting.ipynb  Relations.ipynb  ner-Eval.ipynb  ner-Qualitative.ipynb  utils.py  wandb-Plots.ipynb
Fine-tuning-Transformers/: create_multilingual_dataset.py  create_valid_pubtators.py  infer_ner_multilingual.py  infer_rc.py  predict_multilingual.py  sweep_script_rc.py  train_ner.py  train_ner_multilingual.py  train_rc.py  train_rc_multilingual.py
LLMs/: LLM-Few-Shot.ipynb  best_examples.py  prompt_config.py  util_functions.py
Multilingual_data/: training.txt
data_multilingual/: gold_valid_set.pubtator  train.txt  train_offsets.txt  train_tokens.txt  valid.txt  valid_offsets.txt  valid_tokens.txt
langchain/: chain_train.py  llm_chain.py  prompt_config.py  (+2 more)
(+28 files in other folders)
