[tool.poetry]
name = "yes"
version = "0.1.0"
description = ""
authors = ["Goutham"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simpletransformers = "^0.70.1"
torch = "^2.3.1"
openai = "^1.34.0"
ipykernel = "^6.29.4"
wandb = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
